# SISCON_MOTOR_PID

./: .gitignore  CMakeLists.txt  README.md  logotipo  read_git_tag.cmake  sdkconfig  sdkconfig.old
.github/workflows/: main.yml
components/EncMot/: CMakeLists.txt  EncMot.c  EncMot.h
components/Encoder/: CmakeLists.txt  Encoder.c  Encoder.h
components/MEP_CINEMATICS/: CMakeLists.txt  MEP_CINEMATICS.c  MEP_CINEMATICS.h
components/MEP_CINEMATICS/TESTS/: CMakeLists.txt  esp_log.h  tests.c
components/Motor/: CMakeLists.txt  CmakeLists.txt  motor.c  motor.h
components/Motor/PORT/: motor_DC_GA25.c  motor_SERVO_24H55M020.c
components/PIDcontroller/: Cmakelists.txt  PIDcontroller.c  PIDcontroller.h
components/Tests/: CMakeLists.txt  Graficos PID.xlsx  main_test_PID.c  readme.md  wrappers.h
components/Version_tools/: CMakeLists.txt  Version_tools.c  Version_tools.h
components/console_interface/: CMakeLists.txt  console_interface.c  console_interface.h  kconfig
components/console_interface/modules/encmot_interface/: encmot_interface.c  encmot_interface.h
components/console_interface/modules/mep_interface/: mep_interface.c  mep_interface.h
components/console_interface/modules/sys_common/: sys_common.c  sys_common.h
components/git_tools/: CMakeLists.txt  git_tools.c  git_tools.h
components/mep/: CMakeLists.txt  kconfig  mep.c  mep.h
components/myConsole/: CMakeLists.txt  console_encmot.c  myConsole.c  myConsole.h  system_comands.c  system_comands.h
main/: CMakeLists.txt  app_main.c  idf_component.yml  rotary_encoder_example_main.c
main/TASKS/: task_encmot.c  task_encmot.h  task_graph.c  task_graph.h  task_input.c  task_input.h  tasks.h
